src/test/compile-fail/fn-expr-typestate-2.rs
// error-pattern:Unsatisfied precondition
// xfail-stage0

fn main() { let j = fn () -> int { let i: int; ret i; }(); log_err j; }